--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-08 20:12:32.194481: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-06-08 20:18:39.285722: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -31,7 +31,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow import keras\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
     "import os\n",
     "import cv2\n",
     "from sklearn.model_selection import train_test_split"
@@ -264,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
